2004-12-07  Randolph Chung  <tausq@debian.org>

	* hppa-tdep.h (gdbarch_tdep): Add unwind_adjust_stub method.
	* hppa-hpux-tdep.c (hppa_hpux_unwind_adjust_stub): New function.
	(hppa_hpux_init_abi) Set unwind_adjust_stub method.
	* hppa-tdep.c (hppa_frame_cache): Call unwind_adjust_stub method
    	if defined.

2004-12-07  Randolph Chung  <tausq@debian.org>

	* hppa-tdep.c (hppa_stub_Frame_unwind_cache): Stop unwinding if 
	unwinding from a frame with pc == 0.
	(hppa_stub_frame_this_id): Likewise.
	(hppa_stub_frame_prev_register): Only provide real values if the frame
	cache is not NULL.

2004-12-07  Randolph Chung  <tausq@debian.org>

	* solib-som.c: New file.
	* solib-som.h: New file.
	* solib-pa64.c: New file.
	* solib-pa64.h: New file.

2004-12-07  Mark Kettenis  <kettenis@gnu.org>

	* Makefile.in (inf-ttrace.o): Fix typo.

2004-12-07  Jim Blandy  <jimb@redhat.com>

	* remote.c (remote_threads_info, remote_current_thread): Use
	strtoul to parse thread ID numbers.

2004-12-07  Mark Kettenis  <kettenis@gnu.org>

	* inf-ttrace.c: Include "gdbthread.h".
	(inf_ttrace_num_lwps): New variable.
	(inf_ttrace_num_lwps_in_syscall): Renamed from
	inf_ttrace_num_threads_in_syscall.
	(inf_ttrace_him): Track TTEVT_LWP_CREATE, TTEVT_LWP_EXIT and
	TTEVT_LWP_TERMINATE events.
	(inf_ttrace_create_inferior): Assert that INF_TTRACE_NUM_LWPS is
	zero.
	(inf_ttrace_mourn_inferior): Set INF_TTRACE_NUM_LWPS to zero.
	(inf_ttrace_attach): Assert that INF_TTRACE_NUM_LWPS is zero.
	Track TTEVT_LWP_CREATE, TTEVT_LWP_EXIT and TTEVT_LWP_TERMINATE
	events.
	(inf_ttrace_wait): Report status as TARGET_WAITKIND_SPURIOUS by
	default.  Handle TTEVT_LWP_CREATE, TTEVT_LWP_EXIT and
	TTEVT_LWP_TERMINATE events.
	(inf_ttrace_thread_alive, inf_ttrace_pid_to_str): New functions.
	(inf_ttrace_target): Set to_thread_alive and to_pid_to_str.
	* Makefile.in (inf-ttrace.o): Update dependencies.

	* hppa-tdep.h (hppa_read_pc, hppa_write_pc, hppa_unwind_pc): New
	prototypes.